##############################################################################
#
#    file                 : configure.in
#    created              : Mon Dec 11 22:34:38 CET 2000
#    copyright            : (C) 2000 by Eric Espié                        
#    email                : Eric.Espie@torcs.org   
#    version              : $Id$                                  
#
##############################################################################
#
#   This program is free software; you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation; either version 2 of the License, or
#   (at your option) any later version.
#
##############################################################################

AC_INIT(Make-config.in)
AM_INIT_AUTOMAKE(torcs, 1.2.0)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP

AC_LANG_CPLUSPLUS

AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_INSTALL

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_HEADER_TIME

AC_CHECK_PROG(AR, ar, :, ar, /usr/bin/ar)
AC_CHECK_PROG(LD, ld, :, ld, /usr/bin/gxx)

AC_C_BIGENDIAN

AC_PATH_X
#CFLAGS="-ansi -Wall -Wstrict-prototypes"
CFLAGS="-Wall -Wstrict-prototypes"
AC_ARG_ENABLE(debug,
	[  --enable-debug          set the debug mode], 
	CFLAGS="$CFLAGS -g -DDEBUG -DDEBUG_OUT",
	CFLAGS="$CFLAGS -O3")

AC_ARG_ENABLE(ccmalloc,
	[  --enable-ccmalloc       set the ccmalloc mode (beware path...)], 
	LDFLAGS="$LDFLAGS /home/torcs/ccmalloc-0.3.9-nco/obj/ccmalloc-g++.o -L/home/torcs/ccmalloc-0.3.9-nco/lib -lccmalloc -ldl",
	LDFLAGS="$LDFLAGS")

AC_ARG_ENABLE(profiler,
	[  --enable-profiler       set the profiler mode], 
	CFLAGS="$CFLAGS -DPROFILER",
	CFLAGS="$CFLAGS")

CXXFLAGS="$CFLAGS"
LDFLAGS="$LDFLAGS -L$x_libraries"

dnl Checks for libraries.

dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, sin,,AC_MSG_ERROR([Can't find libm. Please check config.log and if you can't solve the problem send the file to eric.espie@free.fr with the subject \"torcs compilation problem\"]))
dnl Replace `main' with a function in -lX11:
AC_CHECK_LIB(X11, XOpenDisplay,,AC_MSG_ERROR([Can't find libX11. Please check config.log and if you can't solve the problem send the file to eric.espie@free.fr with the subject \"torcs compilation problem\"]))
dnl Replace `main' with a function in -lXext:
AC_CHECK_LIB(Xext, XShmCreateImage,,AC_MSG_ERROR([Can't find libXext. Please check config.log and if you can't solve the problem send the file to eric.espie@free.fr with the subject \"torcs compilation problem\"]))
dnl Replace `main' with a function in -lICE:
AC_CHECK_LIB(ICE, IceSetIOErrorHandler,,AC_MSG_ERROR([Can't find libICE. Please check config.log and if you can't solve the problem send the file to eric.espie@free.fr with the subject \"torcs compilation problem\"]))
dnl Replace `main' with a function in -lSM:
AC_CHECK_LIB(SM, SmsSetErrorHandler,,AC_MSG_ERROR([Can't find libSM. Please check config.log and if you can't solve the problem send the file to eric.espie@free.fr with the subject \"torcs compilation problem\"]))
dnl Replace `main' with a function in -lXt:
AC_CHECK_LIB(Xt, XtDisplay,,AC_MSG_ERROR([Can't find libXt. Please check config.log and if you can't solve the problem send the file to eric.espie@free.fr with the subject \"torcs compilation problem\"]))
dnl Replace `main' with a function in -lXi:
AC_CHECK_LIB(Xi, XOpenDevice,,AC_MSG_ERROR([Can't find libXi. Please check config.log and if you can't solve the problem send the file to eric.espie@free.fr with the subject \"torcs compilation problem\"]))
dnl Replace `main' with a function in -lXmu:
AC_CHECK_LIB(Xmu, XmuSimpleErrorHandler,,AC_MSG_ERROR([Can't find libXmu. Please check config.log and if you can't solve the problem send the file to eric.espie@free.fr with the subject \"torcs compilation problem\"]))
AC_CHECK_LIB(Xxf86vm, XF86VidModeSetViewPort,,AC_MSG_ERROR([Can't find libXxf86vm. Please check config.log and if you can't solve the problem send the file to eric.espie@free.fr with the subject \"torcs compilation problem\"]))

AC_CHECK_LIB(dl, dlopen,,AC_MSG_ERROR([Can't find libdl. Please check config.log and if you can't solve the problem send the file to eric.espie@free.fr with the subject \"torcs compilation problem\"]))

dnl Replace `main' with a function in -lz:
AC_CHECK_LIB(z, crc32,,AC_MSG_ERROR([Can't find libz. Please check config.log and if you can't solve the problem send the file to eric.espie@free.fr with the subject \"torcs compilation problem\"]))
dnl Replace `main' with a function in -lpng:
AC_CHECK_LIB(png, png_init_io,,AC_MSG_ERROR([Can't find libpng. Please check config.log and if you can't solve the problem send the file to eric.espie@free.fr with the subject \"torcs compilation problem\"]))

AC_CHECK_LIB(GL, main,,AC_MSG_ERROR([Can't find libGL. Please check config.log and if you can't solve the problem send the file to eric.espie@free.fr with the subject \"torcs compilation problem\"]))
AC_CHECK_LIB(GLU, main,,AC_MSG_ERROR([Can't find libGLU. Please check config.log and if you can't solve the problem send the file to eric.espie@free.fr with the subject \"torcs compilation problem\"]))
AC_CHECK_LIB(glut, main,,AC_MSG_ERROR([Can't find libglut. Please check config.log and if you can't solve the problem send the file to eric.espie@free.fr with the subject \"torcs compilation problem\"]))

dnl Checks for plib libraries.
AC_CHECK_LIB(plibul, main,,AC_MSG_ERROR([Can't find libplibul. Please check config.log and if you can't solve the problem send the file to eric.espie@free.fr with the subject \"torcs compilation problem\"]))
AC_CHECK_LIB(plibsg, main,,AC_MSG_ERROR([Can't find libplibsg. Please check config.log and if you can't solve the problem send the file to eric.espie@free.fr with the subject \"torcs compilation problem\"]))
AC_CHECK_LIB(plibsl, main,,AC_MSG_ERROR([Can't find libplibsl. Please check config.log and if you can't solve the problem send the file to eric.espie@free.fr with the subject \"torcs compilation problem\"]))
AC_CHECK_LIB(plibsm, main,,AC_MSG_ERROR([Can't find libplibsm. Please check config.log and if you can't solve the problem send the file to eric.espie@free.fr with the subject \"torcs compilation problem\"]))
AC_CHECK_LIB(plibssg, main,,AC_MSG_ERROR([Can't find libplibssg. Please check config.log and if you can't solve the problem send the file to eric.espie@free.fr with the subject \"torcs compilation problem\"]))
AC_CHECK_LIB(plibssgaux, main,,AC_MSG_ERROR([Can't find libplibssgaux. Please check config.log and if you can't solve the problem send the file to eric.espie@free.fr with the subject \"torcs compilation problem\"]))

dnl Taken from FlightGear
AC_MSG_CHECKING([for plib 1.6.0 or newer])
AC_TRY_RUN([
#include <unistd.h>
#include <plib/ul.h>

#define MIN_PLIB_VERSION 160

int main() {
    int major, minor, micro;

    if ( PLIB_VERSION != MIN_PLIB_VERSION ) {
	 return -1;
    }

    return 0;
}

],
  AC_MSG_RESULT(yes),
  [AC_MSG_ERROR([Install plib 1.6.0 first...])],
  AC_MSG_RESULT(yes)
)

AC_OUTPUT(Make-config src/tools/launcher/torcs src/doc/torcsdoc.conf \
	src/tools/package/specfiles/torcs-data.spec \
	src/tools/package/specfiles/torcs-data-cars-Patwo-Design.spec \
	src/tools/package/specfiles/torcs-data-cars-extra.spec \
	src/tools/package/specfiles/torcs-data-tracks-base.spec \
	src/tools/package/specfiles/torcs-robot-K1999.spec \
	src/tools/package/specfiles/torcs-robot-base.spec \
	src/tools/package/specfiles/torcs-robot-berniw.spec \
	src/tools/package/specfiles/torcs.spec \
)
